fixes missing guide name on tablets

--- a/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
+++ b/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
@@ -1283,3 +1283,8 @@ margin: .225rem;
   flex-wrap: wrap;
 } */
 
+@media screen and (max-width: 1023px) {
+  .breadcrumbs {
+    display: block !important;
+  }
+}
